spectec/test/elab/neg/parse-syntax-empty-body.spectec
;; Type definition body is empty (no leading bar, no cases).

syntax foo =
